# cmake-c--template

./: .gitignore  CMakeLists.txt  main.cpp
include/: lib.h
src/: CMakeLists.txt  lib.cpp
tests/: CMakeLists.txt  test.cpp
